--- a/css/styles.css
+++ b/css/styles.css
@@ -285,8 +285,8 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 
 section.your-active-class {
-    background: var(--clr-grey-10);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: var(--clr-primary-1);
 }
 
 section.your-active-class .landing__container::before {
@@ -297,6 +297,10 @@ section.your-active-class .landing__container::before {
 section.your-active-class .landing__container::after {
     opacity: 1;
     animation: rotate 5s linear 0s infinite forwards reverse;
+}
+
+nav .active {
+    border: var(--clr-primary-1);
 }
 
 
